--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@
 *.exe
 *.out
 *.app
+
+
+# Source: https://github.com/github/gitignore/blob/main/CMake.gitignore
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
