use /src/main and /src/test file structure for faster runs so that app won't need to get GTest when not testing updating docker files and README documentation

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,6 +10,6 @@ RUN mkdir build
 
 WORKDIR /usr/src/build
 
-RUN cmake .. && make
+RUN cmake ../main && make
 
-CMD [ "./app.out" ]
+CMD [ "./main.out" ]
