--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 project(AdvProgProj)
-
+set(CMAKE_CXX_STANDARD 14)
 file(GLOB_RECURSE SRC_FILES ./*.cpp ./*.h)
 
 add_executable(
