--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    tty: true
+    stdin_open: true
+    init: true
   test:
     build:
       context: .
