--- a/.github/workflows/cpp-docker-ci.yml
+++ b/.github/workflows/cpp-docker-ci.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
+      # Install Docker Compose
+      - name: Install Docker Compose
+        run: sudo apt-get update && sudo apt-get install -t docker-compose
+
       # Build and run Docker Compose test
       - name: Run tests using Docker Compose
         run: docker-compose -f src/docker-compose.yml run --build test
