--- a/.github/workflows/cpp-docker-ci.yml
+++ b/.github/workflows/cpp-docker-ci.yml
@@ -17,14 +17,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Set up Docker
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      # Install Docker Compose
-      - name: Install Docker Compose
-        run: sudo apt-get update && sudo apt-get install -t docker-compose
-
       # Build and run Docker Compose test
       - name: Run tests using Docker Compose
-        run: docker-compose -f src/docker-compose.yml run --build test
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: "./src/docker-compose.yml"
+          up-flags: "--build"
+          services: |
+            test
