fix double CMD in dockerfiles

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,10 +2,13 @@ FROM gcc:latest
 
 RUN apt-get update && apt-get install -y cmake
 
-# assume Docker context (directory) is the root of the project
+# copy project into container (assume Docker context (directory) is the root of the project)
 COPY . /usr/project
 
 WORKDIR /usr/project
 
-CMD [ "./src/scripts/clean.sh" ]
+# clean
+RUN "./src/scripts/clean.sh"
+
+# run
 CMD [ "./src/scripts/run.sh" ]
