--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   server-main:
     build:
-      context: .
+      context: ./server
       dockerfile: Dockerfile
     tty: true
     stdin_open: true
@@ -10,5 +10,5 @@ services:
       - ../data:/usr/project/data
   server-test:
     build:
-      context: .
+      context: ./server
       dockerfile: test.Dockerfile
