Added a simple dockerfile to client side, already included in the docker compose pls make sure i did ok with the docker compose i did not checked it (idk), the python docker for client works has expected

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -12,3 +12,11 @@ services:
     build:
       context: ./server
       dockerfile: test.Dockerfile
+
+  client-main:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    tty: true
+    stdin_open: true
+    init: true
