add pthread link to cmake server compilation options

--- a/src/server/main/CMakeLists.txt
+++ b/src/server/main/CMakeLists.txt
@@ -11,3 +11,6 @@ add_executable(
   ${SRC_FILES}
   ../main.cpp
 )
+
+# Link the pthread library to resolve threading issues
+target_link_libraries(main.out PRIVATE pthread)
