--- a/src/web-server/package.json
+++ b/src/web-server/package.json
@@ -9,5 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "custom-env": "^2.0.6",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2"
+  }
 }
