--- a/src/web-server/package.json
+++ b/src/web-server/package.json
@@ -15,7 +15,6 @@
     "cors": "^2.8.5",
     "custom-env": "^2.0.6",
     "express": "^4.21.2",
-    "mongoose": "^8.9.2",
-    "mongoose-int32": "^0.6.0"
+    "mongoose": "^8.9.2"
   }
 }
