--- a/src/react-client/package.json
+++ b/src/react-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "material-symbols": "^0.27.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
