--- a/src/android-client/app/src/main/AndroidManifest.xml
+++ b/src/android-client/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.SignInActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.SignUpActivity"
             android:exported="false" />
 
