--- a/src/android-client/app/src/main/AndroidManifest.xml
+++ b/src/android-client/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.home.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_admin"
+            android:theme="@style/Theme.Androidclient.NoActionBar" />
+        <activity
             android:name=".activities.SignUpActivity"
             android:exported="false" />
 
