--- a/src/react-client/public/manifest.json
+++ b/src/react-client/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React Client",
-  "name": "React Client",
+  "short_name": "NextFelix",
+  "name": "NextFelix",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon.svg",
+      "sizes": "192x192 64x64 32x32 24x24 16x16",
+      "type": "image/svg+xml"
     }
   ],
   "start_url": ".",
