update web-server docker to include the react client

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -23,8 +23,8 @@ services:
 
   web-server:
     build:
-      context: ./web-server
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: web-server/Dockerfile
     tty: true
     stdin_open: true
     init: true
